2009-07-23  Bob Halley  <halley@dnspython.org>

	* dns/e164.py (query): The resolver parameter was never used.

2009-06-23  Bob Halley  <halley@dnspython.org>

	* dns/entropy.py (EntropyPool.__init__): open /dev/random unbuffered;
	  there's no need to consume more randomness than we need.  Thanks
	  to Brian Wellington for the patch.

2009-06-19  Bob Halley  <halley@dnspython.org>

	* (Version 1.7.1 released)

2009-06-19  Bob Halley  <halley@dnspython.org>

	* DLV.py was omitted from the kit

	* Negative prerequisites were not handled correctly in _get_section().

2009-06-19  Bob Halley  <halley@dnspython.org>

	* (Version 1.7.0 released)

2009-06-19  Bob Halley  <halley@dnspython.org>

	* On Windows, the resolver set the domain incorrectly.  Thanks
	  to Brandon Carpenter for reporting this bug.

        * Added a to_digestable() method to rdata classes; it returns the
	  digestable form (i.e. DNSSEC canonical form) of the rdata.  For
	  most rdata types this is the same uncompressed wire form.  For
	  certain older DNS RR types, however, domain names in the rdata
	  are downcased.

       * Added support for the HIP RR type.

2009-06-18  Bob Halley  <halley@dnspython.org>

       * Added support for the DLV RR type.

       * Added various DNSSEC related constants (e.g. algorithm identifiers,
         flag values).

       * dns/tsig.py: Added support for BADTRUNC result code.

       * dns/query.py (udp): When checking that addresses are the same,
         use the binary form of the address in the comparison.  This
         ensures that we don't treat addresses as different if they have
         equivalent but differing textual representations.  E.g. "1:00::1"
         and "1::1" represent the same address but are not textually equal.
         Thanks to Kim Davies for reporting this bug.

       * The resolver's query() method now has an optional 'source' parameter,
         allowing the source IP address to be specified.  Thanks to