@@ -1,6 +1,11 @@
 2009-07-23  Bob Halley  <halley@dnspython.org>
 
-	* dns/e164.py (query): The resolver parameter was never used.
+	* dns/rdtypes/IN/SRV.py (SRV._cmp): SRV records were compared
+	  incorrectly due to a cut-and-paste error.  Thanks to Tommie
+	  Gannert for reporting this bug.
+
+	* dns/e164.py (query): The resolver parameter was not used.
+	  Thanks to Matías Bellone for reporting this bug.
 
 2009-06-23  Bob Halley  <halley@dnspython.org>
 
